# dialoGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/: DialogueSubscriber.h  dialoGUI.h
launch/: dialoGUI.launch
src/: DarkStyle.cpp  dialoGUI.cpp  main.cpp  test.cpp
ui/: mainwindow.ui
