<?xml version="1.0"?>
<package>
  <name>dialogui</name>
  <version>0.0.1</version>
  <description>The dialoGUI package</description>

  <maintainer email="gsarthou@laas.fr">srth</maintainer>

  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->

  <author email="gsarthou@laas.fr">srth</author>

  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>qt_build</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>qt_build</run_depend>

</package>
